[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"

[dependencies]
async-trait = "0.1.81"
config = "0.14.0"
dashmap = "6.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
metrics = "0.23.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"

[[example]]
name = "Queue"
path = "Example/Queue.rs"

[lib]
crate-type = ["rlib"]
name = "Echo"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
description = "📣 Echo —"
license = "MIT"
name = "Echo"
repository = "HTTPS://GitHub.Com/CodeEditorLand/Echo"
version = "0.0.1"
edition = "2021"
publish = false
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]
